--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add .
-          git commit -m "generated"
+          git add ./jumpcloud-ADMU/Exe/gui_jcadmu.exe
+          git add ./jumpcloud-ADMU/Exe/uwp_jcadmu.exe
+          git commit -m "Generated EXEs"
           git push
