--- a/jumpcloud-ADMU/JumpCloud.ADMU.nuspec
+++ b/jumpcloud-ADMU/JumpCloud.ADMU.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>JumpCloud.ADMU</id>
-    <version>2.0.1.2053</version>
+    <version>2.0.5.2065</version>
     <description>Powershell Module to run JumpCloud Active Directory Migration Utility.</description>
     <authors>JumpCloud Solutions Architect Team</authors>
     <owners>JumpCloud</owners>
