--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 parameters:
   buildReleaseType:
     description: "Semantic Version increment type of the release. Valid values: major, minor, patch"
-    default: "patch"
+    default: "minor"
     type: enum
     enum: ["major", "minor", "patch"]
   PublishToPSGallery:
@@ -394,3 +394,5 @@ commands:
           root: .
           paths:
             - .
+
+# VS Code Extension Version: 1.4.0
