move publish to ps_gallery step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,18 @@ parameters:
     description: "When `true` the pipeline will use the Module Version specified in JumpCloud Module JumpCloud.psd1 file"
     type: boolean
     default: false
+  GHA_Event:
+    type: string
+    default: ""
+  GHA_Actor:
+    type: string
+    default: ""
+  GHA_Action:
+    type: string
+    default: ""
+  GHA_Meta:
+    type: string
+    default: ""
 orbs:
   win: circleci/windows@5.0.0
 build-and-sign-ADMU: &build-and-sign-ADMU
@@ -72,12 +84,6 @@ release: &release
       requires:
         - Build
         - Build Module
-  - Publish on PSGallery:
-      context: aws-credentials
-      requires:
-        - Build
-        - Build Module
-        - Build Nuspec
   - Publish Module Validation:
       requires:
         - Build
@@ -108,6 +114,9 @@ release: &release
         - Build Module
         - Invoke Git Commit
         - Upload Artifact
+publish: &publish
+  - Publish on PSGallery:
+      context: aws-credentials
 workflows:
   version: 2
   ci:
@@ -125,6 +134,10 @@ workflows:
       and:
         - equal: [master, << pipeline.git.branch >>]
         - equal: [true, << pipeline.parameters.PublishToPSGallery >>]
+  Publish:
+    jobs: *publish
+    when:
+      equal: ["publish", << pipeline.parameters.GHA_Event >>]
 jobs:
   Build: # name of your job
     executor: win/default # executor type
