--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,7 +127,8 @@ workflows:
     jobs: *ghrelease
     when:
       and:
-        - equal: [master, << pipeline.git.branch >>]
+        - equal:
+            [SA-3052_signPSModuleAndReleaseSteps, << pipeline.git.branch >>]
         - equal: [true, << pipeline.parameters.Draft_Release_Workflow >>]
 jobs:
   Build: # name of your job
