--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -10,36 +10,41 @@ jobs:
           CERTPASS: ${{ secrets.CERTPASS }}
           CIRCLECI_TOKEN: ${{ secrets.CIRCLECI_TOKEN }}
         run: |
+          write-host "Begin sign on branch: ${{ github.event.client_payload.branch }}"
           ./Deploy/Sign.ps1
-          ./Deploy/Update-SecurityCatalog.ps1
       - name: Push changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add ./jumpcloud-ADMU/Exe/gui_jcadmu.exe
           git add ./jumpcloud-ADMU/Exe/uwp_jcadmu.exe
-          git add ./jumpcloud-ADMU/JumpCloud.ADMU.psd1
-          git add ./jumpcloud-ADMU/JumpCloud.ADMU.psm1
           git add ./jumpcloud-ADMU/ADMU.cat
-          git add ./jumpcloud-ADMU/PowerShell/Start-Migration.ps1
-          git commit -m "Generated EXEs"
-          git push
-      - name: Draft GitHub Release
+          git commit -m "Signed EXEs & Security Catalog"
+          # TODO: return to git push after testing
+          git push --dry run origin ${{ github.event.client_payload.branch }}
+      - name: Draft GitHub Release and Publish
         run: |
-          curl -u $CIRCLECI_TOKEN: -X POST \
-            --header 'Content-Type: application/json' \
-            -d '{
-              "branch": "master",
-              "parameters": {
-                  "Draft_Release_Workflow" : true
-              }
-            }' \
-          https://circleci.com/api/v2/project/github/TheJumpCloud/jumpcloud-ADMU/pipeline
-  publish:
-    runs-on: ubuntu-latest
-    steps:
-      - name: GitHubActionTrigger
-        id: publish_trigger
-        uses: circleci/trigger_circleci_pipeline@v1.0
-        env:
-          CCI_TOKEN: ${{ secrets.CIRCLECI_TOKEN }}
+          $user = $CIRCLECI_TOKEN
+          $pass = ''
+          $pair = "$($user):$($pass)"
+          $encodedCreds = [System.Convert]::ToBase64String([System.Text.Encoding]::ASCII.GetBytes($pair))
+          $basicAuthValue = "Basic $encodedCreds"
+          $Headers = @{
+              Authorization = $basicAuthValue
+          }
+          if (${{ github.event.client_payload.branch }} -eq 'master'){
+            $body = @{
+                'branch'   = ${{ github.event.client_payload.branch }}
+                parameters = @{
+                    Publish_Release_Workflow = true
+                }
+            } | ConvertTo-Json
+          } else {
+            $body = @{
+                'branch'   = ${{ github.event.client_payload.branch }}
+                parameters = @{
+                    Publish_CodeArtifact_Workflow = true
+                }
+            } | ConvertTo-Json
+          }
+          Invoke-WebRequest -Uri 'https://circleci.com/api/v2/project/github/TheJumpCloud/jumpcloud-ADMU/pipeline' -Headers $Headers -Body $body -Method Post
