--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ version: 2.1
 parameters:
   buildReleaseType:
     description: "Semantic Version increment type of the release. Valid values: major, minor, patch"
-    default: "minor"
+    default: "patch"
     type: enum
-    enum: ["major", "patch", "patch"]
+    enum: ["major", "minor", "patch"]
   PublishToPSGallery:
     description: "When `true` and when run against Master branch, this workflow will publish the latest code to PSGallery"
     type: boolean
