--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'ADMU')
     steps:
-      - run: echo "Building JumpCloud Module Event ADMU"
+      - run: echo "Building JumpCloud Module 'ADMU'"
   Check-PR-Labels:
     needs: ["Filter-Branch"]
     runs-on: ubuntu-latest
