print modules + install if needed

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -127,6 +127,9 @@ jobs:
         run: |
           $env:job_group = ${{ matrix.job_group }}
           # build before test
-          Get-module ps2exe
+          $installedModules = Get-ChildItem "C:\Users\runneradmin\Documents\PowerShell\Modules\"
+          Write-Host "InstalledModules:"
+          $installedModules
+          Write-Host "[Status] Begin Build.ps1"
           . "./Deploy/build.ps1"
           . "./jumpcloud-ADMU/Powershell/InvokePester.ps1" $env:RELEASE_TYPE
