--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -105,8 +105,35 @@ jobs:
                   }
               }
           }
-  Test-Module:
+  Build-Module:
     needs: ["Setup-Build-Dependancies", "Check-PR-Labels"]
+    runs-on: windows-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v3
+        with:
+          path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
+          key: PS-Dependancies
+      - name: Build ADMU Module
+        shell: powershell
+        env:
+          RELEASE_TYPE: ${{ needs.Check-PR-Labels.outputs.RELEASE_TYPE }}
+        run: |
+          . "${{ github.workspace }}/Deploy/build.ps1"
+      - name: Upload Nuspec
+        uses: actions/upload-artifact@v3
+        with:
+          name: jumpcloud-admu-build
+          path: |
+            ${{ github.workspace }}/Jumpcloud-ADMU/.*.nuspec
+            ${{ github.workspace }}/Jumpcloud-ADMU/Docs/*.md
+            ${{ github.workspace }}/Jumpcloud-ADMU/Exe/*.exe
+            ${{ github.workspace }}/Jumpcloud-ADMU/Powershell/Form.ps1
+            ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.psd1
+          retention-days: 1
+  Test-Module:
+    needs: ["Setup-Build-Dependancies", "Check-PR-Labels", "Build-Module"]
     runs-on: windows-latest
     timeout-minutes: 75
     strategy:
@@ -115,6 +142,10 @@ jobs:
         job_group: [0, 1]
     steps:
       - uses: actions/checkout@v4
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: jumpcloud-admu-build
       - uses: actions/cache@v3
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
@@ -139,6 +170,4 @@ jobs:
               Write-Host "[status] Importing: $module at path $($modulePSD1.fullname)"
               Import-Module "$($modulePSD1.fullname)" -force
           }
-          Write-Host "[Status] Begin Build.ps1"
-          . "./Deploy/build.ps1"
           . "./jumpcloud-ADMU/Powershell/InvokePester.ps1" $env:RELEASE_TYPE
