--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -153,7 +153,7 @@ jobs:
           msiexec /i smtools-windows-x64.msi /quiet /qn
           smksp_registrar.exe list > nul 2>&1
           smctl.exe keypair ls > nul 2>&1
-          C:\Windows\System32\certutil.exe -csp "DigiCert Signing Manager KSP" -key -user
+          C:\Windows\System32\certutil.exe -csp "DigiCert Signing Manager KSP" -key -user > nul 2>&1
           smksp_cert_sync.exe > nul 2>&1
       - name: Sign ADMU EXE
         shell: pwsh
